# SyntheticDataSuite

./: .gitignore  AGENTS.md  Makefile  README.md  build_all.sh  docker-compose.yml  package-lock.json
argo-ui/: package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  argo_client.py  catalog_adapter.py  catalog_loader.py  component_models.py  component_registry.py  component_spec.py  db.py  image_validator.py  kube_client.py  main.py  minio_helper.py  pyproject.toml  requirements.txt  workflow-templates.yaml  workflow_builder.py  workflow_models.py  workflow_store.py
backend/catalog/: nodes.yaml
backend/component_generation/: __init__.py  api.py  cli.py  context.py  ingest.py  llm.py  llm_trace.py  logging_utils.py  run_manager.py  schemas.py  state.py  validation.py  workflow.py
backend/component_generation/nodes/: __init__.py  analyst.py  developer.py  hitl.py  integration.py  loader.py  repair.py  tester.py
backend/component_generation/prompts/: analyst_context.md  analyst_system.md  developer_context.md  developer_system.md  repair_context.md  repair_system.md
backend/component_generation/tests/: __init__.py  test_generated_component_types.py  test_ingest.py  test_integration_node.py  test_run_manager.py
backend/tests/: test_argo_client_submit.py  test_workflow_delete_endpoint.py  test_workflow_logs.py  test_workflow_status.py  test_workflow_store_delete.py
deploy/: README.md  general_workflow.yaml  workflow_usage.md
docs/: component-generation.md  deployment-vm-ubuntu24-video-guide.md  dev-workflow.md  new-component.md
(+287 files in other folders)
